# src/routes/routes.js
@@ -8,16 +8,7 @@ const Auth = require('../middlewares/Auth')
 // const bcrypt = require('bcryptjs');
 
 //!SÃO TODAS AS ROTAS DA APLICATION
-
-/**
- * @swagger
- * /account:
- *  post:
- *      description: Create account 
- *      responses:
- *          '200':
- *          description: Sucessfull response
- */          
+      
 router.post("/account", AccountController.createAccount);
 
 router.put("/retrieveaccount", AccountController.retrieveAccount);
@@ -30,7 +21,7 @@ router.post("/deposit", Auth.userAuth, AccountController.depositAccount);
 
 router.post("/withdraw", Auth.userAuth, AccountController.withdrawAccount);
 
-router.get("/statementByDate/", Auth.userAuth, StatementController.statementByDate);
+router.get("/statementByDate", Auth.userAuth, StatementController.statementByDate);
 
 router.put("/updateaccount", Auth.userAuth, AccountController.updatePasswordAccount);
 
@@ -45,17 +36,6 @@ router.post("/accountP2P", Auth.userAuth, AccountController.transactionAccounts)
 router.get("/accountsaldo", Auth.userAuth, AccountController.getSaldo);
 
 router.post("/loginaccount", AccountController.loginAccount);
-
-
-// //Deve conter envio de algum documento referente a pessoa;
-// //Deve conter registro de contas (vinculada a uma única pessoa);
-// //Uma pessoa pode ter apenas um conta;
-//todo O sistema deve conter uma Autenticação por JWT (Será feito o login pela conta);
-// //Deve conter uma listagem de contas;
-// //Deve conter um EndPoint de detalhes da conta
-// //Cada conta deve ter um saldo único;
-// // Deve conter um EndPoint de P2P;
-// // Deve conter um EndPoint de vizualização de saldo da conta;
 
 module.exports = router;//*Exporta as rotas
 
